--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -170,7 +170,13 @@
     "\n",
     "$$\n",
     "\\rho_i = r_f + \\beta_i^3 (\\rho_M - r_f) + b_i^s \\rho_{\\text{SMB}} + b_i^v \\rho_{\\text{HML}} + \\alpha_i \\tag{5}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "In the new [cursive script](https://en.wikipedia.org/wiki/Cursive) defined above, the $3$ coefficients $\\beta_i^3$, $b_i^s$, and $b_i^v$ are estimated by making a [linear regression](https://en.wikipedia.org/wiki/Linear_regression), or, in 'plain English', drawing a [line of best fit](https://www.varsitytutors.com/hotmath/hotmath_help/topics/line-of-best-fit-eyeball-method) of the [time series](https://www.tableau.com/learn/articles/time-series-analysis#:~:text=Time%20series%20analysis%20is%20a,data%20points%20intermittently%20or%20randomly.) $y_i = \\rho_i - r_f$ against the other cool time series $\\rho_M - r_f$ (**Momentum Factor**), $r_{\\text{SMB}}$ (**Size Factor**), and $\\rho_{\\text{HML}}$ (**Value Factor**). \n",
+    "\n",
+    "I feel like I'm forgetting something [$\\ldots$](https://www.merriam-webster.com/dictionary/ellipsis)\n",
+    "\n",
+    "Oh yeah! There's an extra (nerdy) thingy we gotta verify: (generally), $\\beta_i^m \\neq \\beta_i^3$ and needs to be estimated by a separate regression or directly computed."
    ]
   }
  ],
