--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -158,7 +158,7 @@
     "\n",
     "### 2.2 Fama–French Three-Factor Model\n",
     "\n",
-    "So, to echo the previous sentiment, we should (almost surely) explain what is this *funky* model we kept referencing:\n",
+    "So, to echo the previous sentiment, we should ([almost surely](https://en.wikipedia.org/wiki/Almost_surely)) explain what is this *funky* model we kept referencing:\n",
     "\n",
     "$$\n",
     "r_i = r_f + \\beta_i^3(r_M - r_f) + b_i^s r_{\\text{SMB}} + b_i^v r_{\\text{HML}} + \\alpha_i + \\epsilon_i \\tag{4}\n",
