--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -176,7 +176,15 @@
     "\n",
     "I feel like I'm forgetting something [$\\ldots$](https://www.merriam-webster.com/dictionary/ellipsis)\n",
     "\n",
-    "Oh yeah! There's an extra (nerdy) thingy we gotta verify: (generally), $\\beta_i^m \\neq \\beta_i^3$ and needs to be estimated by a separate regression or directly computed."
+    "Oh yeah! There's an extra (nerdy) thingy we gotta verify: (generally), $\\beta_i^m \\neq \\beta_i^3$ and needs to be estimated by a separate regression or directly computed.\n",
+    "\n",
+    "### 2.3 ['Plain' English](https://simple.wikipedia.org/wiki/Simple_English_Wikipedia) Formulation\n",
+    "\n",
+    "Whew. Let's a take breather, shall we?\n",
+    "\n",
+    "I get it; that was a *mouthful*, to say the least.\n",
+    "\n",
+    "But, let's try and *digest* that in a slower, easier fashion."
    ]
   }
  ],
