--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -184,7 +184,17 @@
     "\n",
     "I get it; that was a *mouthful*, to say the least.\n",
     "\n",
-    "But, let's try and *digest* that in a slower, easier fashion."
+    "But, let's try and *digest* that in a slower, easier fashion.\n",
+    "\n",
+    "Overall, we are exploring two *different investment strategies*, each with its own set of rules and objectives; let's dive right into them.\n",
+    "\n",
+    "#### 2.3.1 Strategy [I](https://en.wikipedia.org/wiki/Roman_numerals) Breakdown\n",
+    "\n",
+    "1. **Objective**: Maximize returns while considering risk.\n",
+    "2. **Constraints**: \n",
+    "   - The portfolio's beta (a measure of its *volatility* relative to the market; i.e., how *silly* and *spread out* it is relative to the 'market') must be between $-0.5$ and $0.5$.\n",
+    "   - The sum of the weights assigned to each asset in the portfolio must equal $1$ (i.e., ***we gotta put our money to work!*** As such, let's buy a bunch of stuff that can make us money but, also, let's (try) not to violate the [Laws of Probability Theory](https://en.wikipedia.org/wiki/Probability_measure)).\n",
+    "   - Each individual weight can range from $-2$ to $2$ (i.e., we can be like *[certain individuals](https://www.reddit.com/r/wallstreetbets/comments/l3k9ie/2_million_degenerates/)* from [WallStreetBets](https://en.wikipedia.org/wiki/R/wallstreetbets) and put all our eggs in one basket or, like a more prudent investor, do anything *but that*)."
    ]
   }
  ],
