--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -189,7 +189,7 @@
     "Overall, we are exploring two *different investment strategies*, each with its own set of rules and objectives; let's dive right into them.\n",
     "#### 2.3.1 Strategy [I](https://en.wikipedia.org/wiki/Roman_numerals) Breakdown\n",
     "\n",
-    "1. **Objective**: Maximize returns while considering risk.\n",
+    "1. **Objective**: Maximize returns while considering risk (i.e., make as much **$\\$\\$\\$$** as humanly possible without it being (bi)polar)\n",
     "2. **Constraints**: \n",
     "   - The portfolio's beta (a measure of its *volatility* relative to the market; i.e., how *silly* and *spread out* it is relative to the 'market') must be between $-0.5$ and $0.5$.\n",
     "   - The sum of the weights assigned to each asset in the portfolio must equal $1$ (i.e., ***we gotta put our money to work!*** As such, let's buy a bunch of stuff that can make us money but, also, let's (try) not to violate the [Laws of Probability Theory](https://en.wikipedia.org/wiki/Probability_measure)).\n",
