--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -201,7 +201,11 @@
     "2. **Constraints**:\n",
     "   - The portfolio's beta (a measure of its *volatility* relative to the market; i.e., how *wild* and *crazy* it gets compared to the 'market') must be between $-2$ and $2$.\n",
     "   - The sum of the weights assigned to each asset in the portfolio must equal $1$ (i.e., ***we need to make sure all our money is actively working!*** So, let's diversify our investments while still following the [Laws of Probability Theory](https://en.wikipedia.org/wiki/Probability_measure)).\n",
-    "   - Each individual weight can range from $-2$ to $2$ (i.e., we can either go *all in* on one asset like *[those wild investors](https://www.reddit.com/r/wallstreetbets/comments/l3k9ie/2_million_degenerates/)* on [WallStreetBets](https://en.wikipedia.org/wiki/R/wallstreetbets), or spread our investments more wisely)."
+    "   - Each individual weight can range from $-2$ to $2$ (i.e., we can either go *all in* on one asset like *[those wild investors](https://www.reddit.com/r/wallstreetbets/comments/l3k9ie/2_million_degenerates/)* on [WallStreetBets](https://en.wikipedia.org/wiki/R/wallstreetbets), or spread our investments more wisely).\n",
+    "\n",
+    "Don't worry about all the fancy schmancy 'math'(matics); math is for nerds (yours truly, included). All math is, is it's another language. The more you practice it, the better you get.\n",
+    "\n",
+    "Anyways, that's enough of my rambling and yapping. Let's explore the setup (in da next section *insert cool kid emoji*)!"
    ]
   }
  ],
