--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Overview\n",
+    "## 1 $\\,$ Overview\n",
     "\n",
     "### 1.1 Goal\n",
     "\n",
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. (Investment) Strategy\n",
+    "## 2 $\\,$ (Investment) Strategy\n",
     "\n",
     "Alrighty, let's get to the fun, juicy portion; shall we?\n",
     "\n",
@@ -206,6 +206,19 @@
     "Don't worry about all the fancy schmancy 'math'(matics); math is for nerds (yours truly, included). All math is, is it's another language. The more you practice it, the better you get.\n",
     "\n",
     "Anyways, that's enough of my rambling and yapping. Let's explore the setup (in da next section *insert cool kid emoji*)!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3 $\\,$ Assumptions and (Analysis) Setup\n",
+    "\n",
+    "## 3.1 Setup\n",
+    "\n",
+    "So, if you made it this far, you deserve a cookie! 🍪\n",
+    "\n",
+    "Nice job. 😎"
    ]
   }
  ],
