--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -214,11 +214,16 @@
    "source": [
     "# 3 $\\,$ Assumptions and (Analysis) Setup\n",
     "\n",
-    "## 3.1 Setup\n",
-    "\n",
     "So, if you made it this far, you deserve a cookie! 🍪\n",
     "\n",
-    "Nice job. 😎"
+    "Nice job. 😎\n",
+    "\n",
+    "Alrighty, enough [shenanigans](https://www.merriam-webster.com/dictionary/shenanigan). Let's get (back) to work:\n",
+    "\n",
+    "## 3.1 Setup\n",
+    "\n",
+    "To make it easier, we will make the following assumptions for this ([swaggy](https://dictionary.cambridge.org/us/dictionary/english/swaggy)) project:\n",
+    "\n"
    ]
   }
  ],
