--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -222,7 +222,7 @@
     "\n",
     "## 3.1 Setup\n",
     "\n",
-    "To make it easier, we will make the following assumptions for this ([swaggy](https://dictionary.cambridge.org/us/dictionary/english/swaggy)) project:\n",
+    "To make it easier, we will make the following assumptions for this ([swag(gy)](https://dictionary.cambridge.org/us/dictionary/english/swaggy)) project:\n",
     "\n"
    ]
   }
