--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -223,7 +223,17 @@
     "## 3.1 Setup\n",
     "\n",
     "To make it easier, we will make the following assumptions for this ([swag(gy)](https://dictionary.cambridge.org/us/dictionary/english/swaggy)) project:\n",
-    "\n"
+    "\n",
+    "1. The portfolios will be *reallocated* (reoptimized) weekly from the beginning of **March 2007** to the end of **March 2024**.\n",
+    "\n",
+    "2. Once the (fancy, math-y) models are made, let's think about three cases or situations for the input construction:\n",
+    "    - $\\text{Long-Term Look-Back Period} : 120 \\, \\text{Data Points}$ for estimation of a $\\text{Sample Covariance} \\; \\& \\; \\text{Sample Mean}$; i.e., $\\text{Scenario LT} \\equiv S_{120}$.\n",
+    "    - $\\text{Medium-Term Look-Back Period} : 90 \\, \\text{Data Points}$ for estimation of a $\\text{Sample Covariance} \\; \\& \\; \\text{Sample Mean}$; i.e., $\\text{Scenario MT} \\equiv S_{90}$.\n",
+    "    - $\\text{Short-Term Look-Back Period} : 40 \\, \\text{Data Points}$ for estimation of a $\\text{Sample Covariance} \\; \\& \\; \\text{Sample Mean}$; i.e., $\\text{Scenario ST} \\equiv S_{40}$.\n",
+    "\n",
+    "3. Consider two possible values for the **Target Beta** (again, ***not*** the [colloquial slang term](https://en.wikipedia.org/wiki/Alpha_and_beta_male)) $: 0 \\; \\& \\; 1$.\n",
+    "\n",
+    "4. Consider two possible values for the $\\boldsymbol{\\lambda}$ (the ***risk aversion parameter***; i.e., how much are you [putting on black?](https://en.wikipedia.org/wiki/All_on_Black)) $: 0.10 \\; \\& \\; 0.50$."
    ]
   }
  ],
