--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 $\\,$ Assumptions and (Analysis) Setup\n",
+    "## 3 $\\,$ Assumptions and (Analysis) Setup\n",
     "\n",
     "So, if you made it this far, you deserve a cookie! 🍪\n",
     "\n",
