--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -220,7 +220,7 @@
     "\n",
     "Alrighty, enough [shenanigans](https://www.merriam-webster.com/dictionary/shenanigan). Let's get (back) to work:\n",
     "\n",
-    "## 3.1 Setup\n",
+    "### 3.1 Setup\n",
     "\n",
     "To make it easier, we will make the following assumptions for this ([swag(gy)](https://dictionary.cambridge.org/us/dictionary/english/swaggy)) project:\n",
     "\n",
