--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -233,7 +233,16 @@
     "\n",
     "3. Consider two possible values for the **Target Beta** (again, ***not*** the [colloquial slang term](https://en.wikipedia.org/wiki/Alpha_and_beta_male)) $: 0 \\; \\& \\; 1$.\n",
     "\n",
-    "4. Consider two possible values for the $\\boldsymbol{\\lambda}$ (the ***risk aversion parameter***; i.e., how much are you [putting on black?](https://en.wikipedia.org/wiki/All_on_Black)) $: 0.10 \\; \\& \\; 0.50$."
+    "4. Consider two possible values for the $\\boldsymbol{\\lambda}$ (the ***risk aversion parameter***; i.e., how much are you [putting on black?](https://en.wikipedia.org/wiki/All_on_Black)) $: 0.10 \\; \\& \\; 0.50$.\n",
+    "\n",
+    "\n",
+    "### 3.2 Analysis (Time) Periods\n",
+    "\n",
+    "Alrighty, I am running out of time until the deadline at **11:59 PM EST** (😱), so (please) excuse me if I must ***[lock in](https://www.urbandictionary.com/define.php?term=Lock+in)***, as the [youngins](https://en.wiktionary.org/wiki/youngin) colloquially say.\n",
+    "\n",
+    "We will do the following:\n",
+    "\n",
+    "- "
    ]
   }
  ],
