--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -242,7 +242,9 @@
     "\n",
     "We will do the following:\n",
     "\n",
-    "- "
+    "- Divide the overall analysis period into 5 sub-periods: before subprime (**Period 1**), during subprime (**Period 2**), after the subprime (**Period 3**), COVID (**Period 4**), and post-COVID (**Period 5**).\n",
+    "- • Run separate **[backtests](https://en.wikipedia.org/wiki/Backtesting)** for each sub-period when comparing strategies and assess the impact of the *term structure* (e.g., $S_{40}^{180} \\; \\text{versus} \\; S_{40}^{90}$).\n",
+    "- Run an entire period comparison from **March 1st, 2007** to **March 31st, 2024**."
    ]
   }
  ],
