--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -244,7 +244,11 @@
     "\n",
     "- Divide the overall analysis period into 5 sub-periods: before subprime (**Period 1**), during subprime (**Period 2**), after the subprime (**Period 3**), COVID (**Period 4**), and post-COVID (**Period 5**).\n",
     "- Run separate **[backtests](https://en.wikipedia.org/wiki/Backtesting)** for each sub-period when comparing strategies and assess the impact of the *term structure* (e.g., $S_{40}^{180} \\; \\text{versus} \\; S_{40}^{90}$).\n",
-    "- Run an entire period comparison from **March 1st, 2007** to **March 31st, 2024**."
+    "- Run an entire period comparison from **March 1st, 2007** to **March 31st, 2024**.\n",
+    "\n",
+    "### 3.3 (Back)Testing\n",
+    "\n",
+    "I, unfortunately, do not have enough time to rigorously define *what* backtesting is, but, in simple terms, it's just using past or historical data (stock prices) and *see* how our math/code performs. If it does a good job, yay! If it doesn't, yikes. That's basically it ([in a nutshell](https://www.vocabulary.com/dictionary/in%20a%20nutshell#:~:text=Use%20the%20phrase%20in%20a,make%20a%20long%20story%20short.%22)). "
    ]
   }
  ],
