--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -254,7 +254,9 @@
     "\n",
     "- Backtests are **not** forecasts; we can't ***[double dip](https://www.youtube.com/watch?v=KLOyChP2AWA)*** and use 'future' data for our optimization; that's cheating!\n",
     "\n",
-    "- Regarding '[rebalancing](https://en.wikipedia.org/wiki/Rebalancing_investments)', we assume that we generate a new portfolio each week; that is, we have to run a new optimization every $5 \\; \\text{days}$ for a sequence of dates $t_i \\in [t_1, \\dots, t_n], \\; \\forall \\, i \\in \\{1, \\dots, n\\}$. For the first date $(t_1)$, we use the $60$ previous days from historical data to estimate all inputs, run optimization, and store the weights. For the next date, we **[roll](https://en.wikipedia.org/wiki/Moving_average) the historical data window** by $5 \\; \\text{days}$, re-estimate our inputs, and generate new weights. We [(lather), rinse, and repeat](https://en.wikipedia.org/wiki/Lather,_rinse,_repeat) until we reach our target data $t_n$."
+    "- Regarding '[rebalancing](https://en.wikipedia.org/wiki/Rebalancing_investments)', we assume that we generate a new portfolio each week; that is, we have to run a new optimization every $5 \\; \\text{days}$ for a sequence of dates $t_i \\in [t_1, \\dots, t_n], \\; \\forall \\, i \\in \\{1, \\dots, n\\}$. For the first date $(t_1)$, we use the $60$ previous days from historical data to estimate all inputs, run optimization, and store the weights. For the next date, we **[roll](https://en.wikipedia.org/wiki/Moving_average) the historical data window** by $5 \\; \\text{days}$, re-estimate our inputs, and generate new weights. We [(lather), rinse, and repeat](https://en.wikipedia.org/wiki/Lather,_rinse,_repeat) until we reach our target date $t_n$.\n",
+    "\n",
+    "**進め。(Forward/Onward)**"
    ]
   }
  ],
