--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -258,6 +258,28 @@
     "\n",
     "**進め。(Forward/Onward)**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4 $\\,$ Tools (and Data)\n",
+    "\n",
+    "- $\\text{Strat I} \\Rightarrow \\texttt{CVXPY} \\mid \\text{Strat II} \\Rightarrow \\texttt{Nonlinear Optimizer}$\n",
+    "- $\\text{Data (ETFs)} : $ `yfinance`\n",
+    "    1. $\\text{FXE}$\n",
+    "    2. $\\text{EWJ}$\n",
+    "    3. $\\text{GLD}$\n",
+    "    4. $\\text{QQQ}$\n",
+    "    5. $\\text{SPY}$\n",
+    "    6. $\\text{SHV}$\n",
+    "    7. $\\text{DBA}$\n",
+    "    8. $\\text{USO}$\n",
+    "    9. $\\text{XBI}$\n",
+    "    10. $\\text{ILF}$\n",
+    "    11. $\\text{EPP}$\n",
+    "    12. $\\text{FEZ}$"
+   ]
   }
  ],
  "metadata": {
