--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -265,6 +265,8 @@
    "source": [
     "## 4 $\\,$ Tools (and Data)\n",
     "\n",
+    "### 4.1 What? How?\n",
+    "\n",
     "- $\\text{Strat I} \\Rightarrow \\texttt{CVXPY} \\mid \\text{Strat II} \\Rightarrow \\texttt{Nonlinear Optimizer}$\n",
     "- $\\text{Data (ETFs)} : $ `yfinance`\n",
     "    1. $\\text{FXE}$\n",
