--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -265,9 +265,8 @@
    "source": [
     "## 4 $\\,$ Tools (and Data)\n",
     "\n",
-    "### 4.1 What? How?\n",
-    "\n",
     "- $\\text{Strat I} \\Rightarrow \\texttt{CVXPY} \\mid \\text{Strat II} \\Rightarrow \\texttt{Nonlinear Optimizer}$\n",
+    "\n",
     "- $\\text{Data (ETFs)} : $ `yfinance`\n",
     "    1. $\\text{FXE}$\n",
     "    2. $\\text{EWJ}$\n",
@@ -280,7 +279,20 @@
     "    9. $\\text{XBI}$\n",
     "    10. $\\text{ILF}$\n",
     "    11. $\\text{EPP}$\n",
-    "    12. $\\text{FEZ}$"
+    "    12. $\\text{FEZ}$\n",
+    "\n",
+    "- ***To Do***:\n",
+    "    1. **Task 1** : `download_data(start_date, end_date)`, `compute_daily_returns(...)`, `annualize_data(...)`.\n",
+    "\n",
+    "    2. **Task 2** : `factor_model(...)`.\n",
+    "    \n",
+    "    3. **Task 3** : `optimize_model(...)`.\n",
+    "\n",
+    "    4. **Task 4** : `backtest(...)`\n",
+    "\n",
+    "    5. **Task 5** : `analyze(...)`\n",
+    "\n",
+    "    6. **Task 6** : `summarize(...)`"
    ]
   }
  ],
