--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -296,6 +296,40 @@
     "\n",
     "    6. **Task 6** : `summarize(...)`"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5 $\\,$ Performance $+$ Risk Reporting $4$ Strats\n",
+    "\n",
+    "$\\text{KPIs}$:\n",
+    "- $\\text{Cumulative PnL / Return}$\n",
+    "- $\\text{Average Daily Arithmetic / Geometric Return} \\mid \\text{Daily Min Return}$\n",
+    "- $\\text{10 Day Max Drawdown} \\mid \\text{Sharpe}$\n",
+    "- $\\text{Vol, Skew, (Excess) Kurt, (Modified) VaR, Expected Shortfall (CVar)}$\n",
+    "\n",
+    "$\\text{Tabular Formulation}$:\n",
+    "\n",
+    "<style>\n",
+    "table {\n",
+    "  width: 100%;\n",
+    "  border-collapse: collapse;\n",
+    "}\n",
+    "th, td {\n",
+    "  border: 1px solid black;\n",
+    "  text-align: center;\n",
+    "  vertical-align: middle;\n",
+    "  padding: 8px;\n",
+    "}\n",
+    "</style>\n",
+    "\n",
+    "|                    | $ S_{40}(\\beta_T = 0) $   | $ S_{90}(\\beta_T = 1) $   | $ S_{120}(\\beta_T = 0) $   | SPY |\n",
+    "|:------------------:|:-------------------------:|:-------------------------:|:-------------------------:|:---:|\n",
+    "| **Mean Return**    |                           |                           | 12                         |     |\n",
+    "| **:**              |                           |                           | :                          |     |\n",
+    "| **Max DD**         |                           |                           | 8                          |     |"
+   ]
   }
  ],
  "metadata": {
