--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -328,7 +328,11 @@
     "|:------------------:|:-------------------------:|:-------------------------:|:-------------------------:|:---:|\n",
     "| **Mean Return**    |                           |                           | 12                         |     |\n",
     "| **:**              |                           |                           | :                          |     |\n",
-    "| **Max DD**         |                           |                           | 8                          |     |"
+    "| **Max DD**         |                           |                           | 8                          |     |\n",
+    "\n",
+    "$\\text{Furthermore}$:\n",
+    "  1. $ \\text{Evolution Plot} : \\text{Cumulative Daily PnL} \\; \\mid \\; P_0 = \\$100, \\text{SPY}_0 = \\$100 .$\n",
+    "  2. $ \\text{Plot + Analyze (Daily) Return Distribution} .$"
    ]
   }
  ],
