--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -334,6 +334,21 @@
     "  1. $ \\text{Evolution Plot} : \\text{Cumulative Daily PnL} \\; \\mid \\; P_0 = \\$100, \\text{SPY}_0 = \\$100 .$\n",
     "  2. $ \\text{Plot + Analyze (Daily) Return Distribution} .$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6 $\\,$ Deliverable\n",
+    "\n",
+    "$$ 1 \\equiv \\text{Report : Findings, Conclusions, Estimator Impact on Strats (When? Why?), Crisis Periods (Subprime, COVID),} \n",
+    "\\\\ \n",
+    "\\; 2 \\; \\text{Axes : Estimator Term-Structure Sensitivity (ST, MT, LT) for} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\boldsymbol{\\mu} \\mid \\text{Target} \\; \\beta_T \\; \\text {Sensitivity}.$$\n",
+    "\n",
+    "$$\n",
+    "2 \\equiv\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
