--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -339,14 +339,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6 $\\,$ Deliverable\n",
+    "## 6 $\\,$ Deliverables\n",
     "\n",
-    "$$ 1 \\equiv \\text{Report : Findings, Conclusions, Estimator Impact on Strats (When? Why?), Crisis Periods (Subprime, COVID),} \n",
-    "\\\\ \n",
-    "\\; 2 \\; \\text{Axes : Estimator Term-Structure Sensitivity (ST, MT, LT) for} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\boldsymbol{\\mu} \\mid \\text{Target} \\; \\beta_T \\; \\text {Sensitivity}.$$\n",
+    "$$ \n",
+    "1 \\equiv \\text{Report : Findings, Conclusions, Estimator Impact on Strats (When? Why?), Crisis Periods (Subprime, COVID),} \n",
+    "$$\n",
     "\n",
     "$$\n",
-    "2 \\equiv\n",
+    "2 \\equiv \\text{Axes : Estimator Term-Structure Sensitivity (ST, MT, LT) for} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\boldsymbol{\\mu} \\mid \\text{Target} \\; \\beta_T \\; \\text {Sensitivity}.$$\n",
+    "\n",
+    "$$\n",
+    "3 \\equiv \\text{Notation, Strats, Graphs, \\& Tables Description}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "4 \\equiv \\texttt{Code}\n",
     "$$"
    ]
   }
