--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -342,18 +342,22 @@
     "## 6 $\\,$ Deliverables\n",
     "\n",
     "$$ \n",
-    "1 \\equiv \\text{Report : Findings, Conclusions, Estimator Impact on Strats (When? Why?), Crisis Periods (Subprime, COVID),} \n",
+    "1 \\equiv \\text{Report : Findings, Conclusions, Estimator Impact on Strats (When? Why?),}\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "\\text{Crisis Periods (Subprime, COVID);} \n",
     "$$\n",
     "\n",
     "$$\n",
-    "2 \\equiv \\text{Axes : Estimator Term-Structure Sensitivity (ST, MT, LT) for} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\boldsymbol{\\mu} \\mid \\text{Target} \\; \\beta_T \\; \\text {Sensitivity}.$$\n",
+    "2 \\equiv \\text{Axes : Estimator Term-Structure Sensitivity (ST, MT, LT) for} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\boldsymbol{\\mu} \\mid \\text{Target} \\; \\beta_T \\; \\text {Sensitivity};$$\n",
     "\n",
     "$$\n",
-    "3 \\equiv \\text{Notation, Strats, Graphs, \\& Tables Description}\n",
+    "3 \\equiv \\text{Notation, Strats, Graphs, \\& Tables Description;}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "4 \\equiv \\texttt{Code}\n",
+    "4 \\equiv \\texttt{Code.}\n",
     "$$"
    ]
   }
