--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -360,6 +360,32 @@
     "4 \\equiv \\texttt{Code.}\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7 $\\,$ Addendum\n",
+    "\n",
+    "### Cross-Section Regression Model\n",
+    "\n",
+    "For estimation of the parameters of the factor model, you can use a cross-sectional regression model by gathering all the individual securities models in a single \"big\" factor model. If you assume that you have 3 factors, then the model at time \\( t \\) for each asset is given by\n",
+    "\n",
+    "$$\n",
+    "r_{it}^e = \\alpha_i + \\beta_i^3 (r_{Mt} - r_{ft}) + b_i^s r_{SMBt} + b_i^v r_{HMLt} + \\alpha_i + \\epsilon_{it} \\tag{6}\n",
+    "$$\n",
+    "\n",
+    "with $ r_{it}^e = r_{it} - r_{ft} $, and moreover the $ \\epsilon_{it} $ are independent of the factors and satisfy\n",
+    "\n",
+    "$$\n",
+    "\\text{cov}(\\epsilon_{it}, \\epsilon_{js}) = \n",
+    "\\begin{cases} \n",
+    "\\sigma_i^2 & \\text{when } i = j, \\text{ and } t = s \\\\ \n",
+    "0 & \\text{otherwise} \n",
+    "\\end{cases}\n",
+    "\\tag{7}\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
