--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -384,7 +384,64 @@
     "0 & \\text{otherwise} \n",
     "\\end{cases}\n",
     "\\tag{7}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "### Time Series Model (Security)\n",
+    "\n",
+    "If we consider $ T $ observations of the excess return of Security $ S_i $ stacked in a column vector $ R_i $:\n",
+    "\n",
+    "$$\n",
+    "R_i = \n",
+    "\\begin{bmatrix}\n",
+    "r_{i1}^e \\\\\n",
+    "r_{i2}^e \\\\\n",
+    "\\vdots \\\\\n",
+    "r_{iT}^e\n",
+    "\\end{bmatrix}\n",
+    "\\tag{8}\n",
+    "$$\n",
+    "\n",
+    "we have the time series regression model for Security $ i $:\n",
+    "\n",
+    "$$\n",
+    "R_i = 1_T \\alpha_i + F \\beta_i + \\epsilon_i \\quad \\text{for} \\quad i = 1, 2, \\ldots, n \\tag{9}\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$$\n",
+    "\\beta_i = \n",
+    "\\begin{bmatrix}\n",
+    "\\beta_i^3 \\\\\n",
+    "b_i^s \\\\\n",
+    "b_i^v\n",
+    "\\end{bmatrix}\n",
+    "\\tag{10}\n",
+    "$$\n",
+    "\n",
+    "- $\\beta_i$ is the (3 by 1) vector of Betas\n",
+    "\n",
+    "$$\n",
+    "F = \n",
+    "\\begin{bmatrix}\n",
+    "f_1' \\\\\n",
+    "\\vdots \\\\\n",
+    "f_T'\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "r_{M1} - r_{f1} & r_{SMB1} & r_{HML1} \\\\\n",
+    "\\vdots & \\vdots & \\vdots \\\\\n",
+    "r_{MT} - r_{fT} & r_{SMBT} & r_{HMLT}\n",
+    "\\end{bmatrix}\n",
+    "\\tag{11}\n",
+    "$$\n",
+    "\n",
+    "- $\\mathbf{F}$ is the (T x 3) matrix of observations of the factors.\n",
+    "\n",
+    "- the residual term $\\epsilon_i$ is a (T by 1) vector satisfying $ \\mathbb{E}(\\epsilon_i \\epsilon_i') = \\sigma_i^2 I_T $\n",
+    "\n",
+    "The previous model is well-suited for a regression to estimate the coefficients of the model using data for the securities and the factors."
    ]
   }
  ],
