--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -367,7 +367,7 @@
    "source": [
     "## 7 $\\,$ Addendum\n",
     "\n",
-    "### Cross-Section Regression Model\n",
+    "### 7.1 Cross-Section Regression Model\n",
     "\n",
     "For estimation of the parameters of the factor model, you can use a cross-sectional regression model by gathering all the individual securities models in a single \"big\" factor model. If you assume that you have 3 factors, then the model at time \\( t \\) for each asset is given by\n",
     "\n",
@@ -386,7 +386,7 @@
     "\\tag{7}\n",
     "$$\n",
     "\n",
-    "### Time Series Model (Security)\n",
+    "### 7.2 Time Series Model (Security)\n",
     "\n",
     "If we consider $ T $ observations of the excess return of Security $ S_i $ stacked in a column vector $ R_i $:\n",
     "\n",
@@ -441,7 +441,81 @@
     "\n",
     "- the residual term $\\epsilon_i$ is a (T by 1) vector satisfying $ \\mathbb{E}(\\epsilon_i \\epsilon_i') = \\sigma_i^2 I_T $\n",
     "\n",
-    "The previous model is well-suited for a regression to estimate the coefficients of the model using data for the securities and the factors."
+    "The previous model is well-suited for a regression to estimate the coefficients of the model using data for the securities and the factors.\n",
+    "\n",
+    "## 7.3 Cross Sectional Model\n",
+    "\n",
+    "Alternatively, we can use a cross-sectional formulation that can be useful for risk analysis, including the derivation of the covariance matrix of the returns. If we define $ R_t $:\n",
+    "\n",
+    "$$\n",
+    "R_t = \n",
+    "\\begin{bmatrix}\n",
+    "r_{1t}^e \\\\\n",
+    "r_{2t}^e \\\\\n",
+    "\\vdots \\\\\n",
+    "r_{nt}^e\n",
+    "\\end{bmatrix}\n",
+    "\\tag{12}\n",
+    "$$\n",
+    "\n",
+    "the vector of all securities' excess returns at time $ t $, then we can write\n",
+    "\n",
+    "$$\n",
+    "R_t = \\alpha + \\mathbf{B} f_t + \\epsilon_t \\quad \\text{for} \\quad t = 1, 2, \\ldots, T, \\tag{13}\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{B} = \n",
+    "\\begin{bmatrix}\n",
+    "\\beta_1' \\\\\n",
+    "\\beta_2' \\\\\n",
+    "\\vdots \\\\\n",
+    "\\beta_n'\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "\\beta_1^3 & b_1^s & b_1^v \\\\\n",
+    "\\vdots & \\vdots & \\vdots \\\\\n",
+    "\\beta_n^3 & b_n^s & b_n^v\n",
+    "\\end{bmatrix}\n",
+    "\\tag{14}\n",
+    "$$\n",
+    "\n",
+    "- $ \\mathbf{B} $ is an $ N $ by 3 matrix,\n",
+    "\n",
+    "$$\n",
+    "f_t = \n",
+    "\\begin{bmatrix}\n",
+    "r_{Mt} - r_{f1} \\\\\n",
+    "r_{SMBt} \\\\\n",
+    "r_{HMLt}\n",
+    "\\end{bmatrix}\n",
+    "\\tag{15}\n",
+    "$$\n",
+    "\n",
+    "- $ f_t $ is the vector of factor returns at time $ t $.\n",
+    "\n",
+    "- $ \\mathbb{E}(\\epsilon_t \\epsilon_t' | f_t) = D = \\text{Diag}(\\sigma_1^2, \\ldots, \\sigma_n^2) $\n",
+    "\n",
+    "The cross-sectional model implies that if $ \\Omega_f $ is the covariance of the factors, then\n",
+    "\n",
+    "$$\n",
+    "\\text{Cov}(R_t) = \\mathbf{B} \\Omega_f \\mathbf{B}' + D \\tag{16}\n",
+    "$$\n",
+    "\n",
+    "which implies that\n",
+    "\n",
+    "$$\n",
+    "\\text{Cov}(R_{it}) = \\beta_i \\Omega_f \\beta_i + \\sigma_I^2 \\tag{17}\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "\\text{Cov}(R_{it}, R_{jt}) = \\beta_i \\Omega_f \\beta_j \\tag{18}.\n",
+    "$$"
    ]
   }
  ],
