--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -517,6 +517,135 @@
     "\\text{Cov}(R_{it}, R_{jt}) = \\beta_i \\Omega_f \\beta_j \\tag{18}.\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8 $\\,$ Code\n",
+    "\n",
+    "Code is (generally) unbecoming (ugly, yucky) to the (naked, untrained) eye; however, beauty lies within (the eye of) the beholder. As such, here is my (code) vomit:\n",
+    "\n",
+    "### 8.1 Code (Vomit)\n",
+    "\n",
+    "```python\n",
+    "import yfinance as yf\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import cvxpy as cp\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Section 4: Tools and Data\n",
+    "\n",
+    "def download_data(tickers, start_date, end_date):\n",
+    "    data = yf.download(tickers, start=start_date, end=end_date)\n",
+    "    return data['Adj Close']\n",
+    "\n",
+    "def compute_daily_returns(data):\n",
+    "    return data.pct_change().dropna()\n",
+    "\n",
+    "def annualize_data(daily_returns):\n",
+    "    return daily_returns.mean() * 252, daily_returns.cov() * 252\n",
+    "\n",
+    "# Download data\n",
+    "tickers = ['FXE', 'EWJ', 'GLD', 'QQQ', 'SPY', 'SHV', 'DBA', 'USO', 'XBI', 'ILF', 'EPP', 'FEZ']\n",
+    "data = download_data(tickers, '2007-03-01', '2024-03-31')\n",
+    "\n",
+    "# Compute daily returns\n",
+    "daily_returns = compute_daily_returns(data)\n",
+    "\n",
+    "# Section 5: Factor Model\n",
+    "\n",
+    "def factor_model(daily_returns):\n",
+    "    factors = download_data(['^GSPC', '^IXIC', '^DJI'], '2007-03-01', '2024-03-31')\n",
+    "    factor_returns = compute_daily_returns(factors)\n",
+    "    factor_returns.columns = ['Market', 'NASDAQ', 'DowJones']\n",
+    "    return factor_returns\n",
+    "\n",
+    "factor_returns = factor_model(daily_returns)\n",
+    "\n",
+    "# Section 6: Optimization and Backtesting\n",
+    "\n",
+    "def optimize_model(expected_returns, covariance_matrix, beta_target, lambda_value):\n",
+    "    n = len(expected_returns)\n",
+    "    weights = cp.Variable(n)\n",
+    "    risk = cp.quad_form(weights, covariance_matrix)\n",
+    "    objective = cp.Maximize(expected_returns.T @ weights - lambda_value * cp.sqrt(risk))\n",
+    "    constraints = [cp.sum(weights) == 1, weights >= -2, weights <= 2]\n",
+    "    if beta_target is not None:\n",
+    "        beta = factor_model(daily_returns).mean().values @ weights\n",
+    "        constraints.append(beta == beta_target)\n",
+    "    problem = cp.Problem(objective, constraints)\n",
+    "    problem.solve()\n",
+    "    return weights.value\n",
+    "\n",
+    "def backtest(data, expected_returns, covariance_matrix, beta_target, lambda_value, start_date, end_date):\n",
+    "    dates = pd.date_range(start=start_date, end=end_date, freq='W')\n",
+    "    portfolio_values = []\n",
+    "    for date in dates:\n",
+    "        # Recalculate data and parameters up to current date\n",
+    "        historical_data = data[:date]\n",
+    "        daily_returns = compute_daily_returns(historical_data)\n",
+    "        mu, cov = annualize_data(daily_returns)\n",
+    "        \n",
+    "        # Optimize portfolio\n",
+    "        weights = optimize_model(mu, cov, beta_target, lambda_value)\n",
+    "        \n",
+    "        # Calculate portfolio value\n",
+    "        portfolio_return = daily_returns @ weights\n",
+    "        portfolio_values.append((1 + portfolio_return).cumprod()[-1])\n",
+    "    \n",
+    "    return pd.Series(portfolio_values, index=dates)\n",
+    "\n",
+    "# Backtest strategies\n",
+    "mu, cov = annualize_data(daily_returns)\n",
+    "strategy_1 = backtest(data, mu, cov, 0, 0.10, '2007-03-01', '2024-03-31')\n",
+    "strategy_2 = backtest(data, mu, cov, 1, 0.50, '2007-03-01', '2024-03-31')\n",
+    "\n",
+    "# Section 6: Performance and Risk Reporting\n",
+    "\n",
+    "def analyze_performance(strategy):\n",
+    "    cumulative_return = strategy[-1] / strategy[0] - 1\n",
+    "    annualized_return = strategy.pct_change().mean() * 252\n",
+    "    annualized_volatility = strategy.pct_change().std() * np.sqrt(252)\n",
+    "    max_drawdown = (strategy / strategy.cummax() - 1).min()\n",
+    "    sharpe_ratio = annualized_return / annualized_volatility\n",
+    "    return cumulative_return, annualized_return, annualized_volatility, max_drawdown, sharpe_ratio\n",
+    "\n",
+    "strategy_1_performance = analyze_performance(strategy_1)\n",
+    "strategy_2_performance = analyze_performance(strategy_2)\n",
+    "\n",
+    "# Section 7: Summarize Results\n",
+    "\n",
+    "def summarize_results(strategy_1_performance, strategy_2_performance):\n",
+    "    print(\"Strategy 1 Performance:\")\n",
+    "    print(f\"Cumulative Return: {strategy_1_performance[0]:.2f}\")\n",
+    "    print(f\"Annualized Return: {strategy_1_performance[1]:.2f}\")\n",
+    "    print(f\"Annualized Volatility: {strategy_1_performance[2]:.2f}\")\n",
+    "    print(f\"Max Drawdown: {strategy_1_performance[3]:.2f}\")\n",
+    "    print(f\"Sharpe Ratio: {strategy_1_performance[4]:.2f}\")\n",
+    "    \n",
+    "    print(\"\\nStrategy 2 Performance:\")\n",
+    "    print(f\"Cumulative Return: {strategy_2_performance[0]:.2f}\")\n",
+    "    print(f\"Annualized Return: {strategy_2_performance[1]:.2f}\")\n",
+    "    print(f\"Annualized Volatility: {strategy_2_performance[2]:.2f}\")\n",
+    "    print(f\"Max Drawdown: {strategy_2_performance[3]:.2f}\")\n",
+    "    print(f\"Sharpe Ratio: {strategy_2_performance[4]:.2f}\")\n",
+    "\n",
+    "summarize_results(strategy_1_performance, strategy_2_performance)\n",
+    "\n",
+    "# Plot results\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(strategy_1, label='Strategy 1')\n",
+    "plt.plot(strategy_2, label='Strategy 2')\n",
+    "plt.legend()\n",
+    "plt.title('Strategy Performance')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Portfolio Value')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
