--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -524,7 +524,7 @@
    "source": [
     "## 8 $\\,$ Code\n",
     "\n",
-    "Code is (generally) unbecoming (ugly, yucky) to the (naked, untrained) eye; however, beauty lies within (the eye of) the beholder. As such, here is my (code) vomit:\n",
+    "Code is (generally) unbecoming (ugly, yucky) to the (naked, untrained) eye; however, ***beauty lies within (the eye of) the beholder***. As such, here is my (code) vomit:\n",
     "\n",
     "### 8.1 Code (Vomit)\n",
     "\n",
