--- a/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fp-md/fe630-fp-jpm.ipynb
@@ -545,7 +545,10 @@
     "    return data.pct_change().dropna()\n",
     "\n",
     "def annualize_data(daily_returns):\n",
-    "    return daily_returns.mean() * 252, daily_returns.cov() * 252\n",
+    "    mean_returns = daily_returns.mean() * 252\n",
+    "    cov_matrix = daily_returns.cov() * 252\n",
+    "    cov_matrix = (cov_matrix + cov_matrix.T) / 2  # Ensure the covariance matrix is symmetric\n",
+    "    return mean_returns, cov_matrix\n",
     "\n",
     "# Download data\n",
     "tickers = ['FXE', 'EWJ', 'GLD', 'QQQ', 'SPY', 'SHV', 'DBA', 'USO', 'XBI', 'ILF', 'EPP', 'FEZ']\n",
@@ -645,6 +648,36 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9 $\\,$ Results\n",
+    "\n",
+    "### 9.1 Tabular Performance (Absolute)\n",
+    "\n",
+    "| Metric                | Strategy 1 | Strategy 2 |\n",
+    "|-----------------------|------------|------------|\n",
+    "| Cumulative Return     | 1.9357     | 1.3975     |\n",
+    "| Annualized Return     | 0.3120     | 0.2546     |\n",
+    "| Annualized Volatility | 0.1204     | 0.1199     |\n",
+    "| Max Drawdown          | -0.0641    | -0.1101    |\n",
+    "| Sharpe Ratio          | 2.5909     | 2.1228     |\n",
+    "\n",
+    "### 9.2 Tabular Performance $(\\%)$\n",
+    "\n",
+    "| Metric                | Strategy 1 (%) | Strategy 2 (%) |\n",
+    "|-----------------------|----------------|----------------|\n",
+    "| Cumulative Return     | 193.57         | 139.75         |\n",
+    "| Annualized Return     | 31.20          | 25.46          |\n",
+    "| Annualized Volatility | 12.04          | 12.00          |\n",
+    "| Max Drawdown          | -6.41          | -11.02         |\n",
+    "| Sharpe Ratio          | 2.5909         | 2.1221         |\n",
+    "\n",
+    "### 9.3 Strategy Performance Plot\n",
+    "\n"
    ]
   }
  ],
